welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.error
squirrelPlay:2: error: not found: value temps
  if (temps < 60){return false}
      ^squirrelPlay:3: error: not found: value temps
  else if (isSummer && temps < 100){return true}
                       ^squirrelPlay:4: error: not found: value temps
  else if (temps  < 90 ){return true}
           ^