welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.code
def squirrelPlay(temp:Int, isSummer:Boolean):Boolean = {
  if (temps < 60){return false}
  else if (isSummer && temps < 100){return true}
  else if (temps  < 90 ){return true}
  else {return false}
}